@@ -103,8 +103,8 @@ elif doAction0 == \'add\':\n
                             , \'view\'\n
                             , \'portal_status_message=Object+Created.\')\n
   return request.RESPONSE.redirect( redirect_url )\n
+# Otherwise, check if this is an automatic menu (template)\n
 elif doAction0 == \'template\':\n
-  # Support for document templates (copy / paste a document from preferences)\n
   template_relative_url = \' \'.join(Base_doAction[1:])\n
   template = context.getPortalObject().restrictedTraverse(template_relative_url)\n
   if template is not None:\n
@@ -112,8 +112,9 @@ elif doAction0 == \'template\':\n
     preference.manage_copyObjects(ids=[template.getId()], REQUEST=request, RESPONSE=None)\n
     new_content_list = context.manage_pasteObjects(request[\'__cp\'])\n
     new_content_id = new_content_list[0][\'new_id\']\n
-    redirect_url = \'%s/%s/%s?%s\' % ( context.absolute_url()\n
-                            ,  new_content_id\n
+    new_content = context[new_content_id]\n
+    new_content.makeTemplateInstance()\n
+    redirect_url = \'%s/%s?%s\' % ( new_content.absolute_url()\n
                             , \'view\'\n
                             , \'portal_status_message=Template+Created.\')\n
   else: \n
@@ -121,7 +122,7 @@ elif doAction0 == \'template\':\n
                             , \'view\'\n
                             , \'portal_status_message=Template+Does+not+Exist.\')\n
   return request.RESPONSE.redirect( redirect_url )\n
-  \n
+\n
 return getattr(context,form_id)(request)\n
 
 
