@@ -1,4 +1,8 @@
+2006-01-23 Alex
+* Added "Add portal folders" permission for Author in Base_setDefaultSecurity
+
 2006-01-21 JP
+* Added Base_jumpToRelationObject to ease the implementation of jump menus
 * Added support for user based role assignment (ERP5Type_getSecurityCategoryFromArrow)
 
 2006-01-20 JP & Jerome
